manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounting
  template:
    metadata:
      labels:
        app: accounting
    spec:
      containers:
        - name: accounting
          image: djans/accounting:d3c93bee6c5f094a12102fc273662fba1c620f31
          ports:
            - containerPort: 80
