manifests/accounting-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: accounting-ingress
  namespace: accounting
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: accounting.cogitosum.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: accounting
                port:
                  number: 80
